--- a/Edustrefa.WebApplication/wwwroot/css/site.css
+++ b/Edustrefa.WebApplication/wwwroot/css/site.css
@@ -18,5 +18,12 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: azure;
+}
+
+
+
+h1, p {
+    color: slategrey;
 }
