--- a/Edustrefa.WebApplication/Views/Home/Index.cshtml
+++ b/Edustrefa.WebApplication/Views/Home/Index.cshtml
@@ -2,30 +2,50 @@
     ViewData["Title"] = "Edustrefa";
 }
 
-<div class="text-center body-inherited-style">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="body-inherited-style-home-page">
+    <h1 class="h1-p-inherited-text-style-home-page">
+        <b>Edustrefa</b>
+    </h1>
+    <p class="h1-p-inherited-text-style-home-page">
+        - Jakies motywacyjne pierdy
+    </p>
+    <div class="image-container">
+        <img src="Images/Home/test1.jpg" alt="Obrazek 1">
+        <img src="Images/Home/test2.jpg" alt="Obrazek 2">
+        <img src="Images/Home/test3.jpg" alt="Obrazek 3">
+    </div>
 </div>
 
 <div class="text-center">
-    <h1 class="display-4">Welcome 2</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Nagłówek</h1>
+    <p>Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+        Coś tu można dać. 
+    </p>
 </div>
-
-<div class="text-center body-inherited-style">
-    <h1 class="display-4">Welcome 3</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-
