--- a/Edustrefa.WebApplication/Views/Home/Privacy.cshtml
+++ b/Edustrefa.WebApplication/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "O Nas";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>To coś możmy dać o nas o Tobie, doświadczenie bla, bla, bla</p>
