--- a/Edustrefa.WebApplication/Views/Shared/_Layout.cshtml
+++ b/Edustrefa.WebApplication/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar-inherited-style navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-inherited-text-style" asp-area="" asp-controller="Home" asp-action="Index">Edustrefa</a>
+                <a class="navbar-inherited-text-style" asp-area="" asp-controller="Home" asp-action="Index"><b>Edustrefa</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav justify-content-end">
                         <li class="nav-item">
-                            <a class="navbar-inherited-text-style" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="navbar-inherited-text-style" asp-area="" asp-controller="AboutUs" asp-action="AboutUs">O Nas</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="navbar-inherited-text-style" asp-area="" asp-controller="AboutUs" asp-action="AboutUs">O Nas 2</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="navbar-inherited-text-style" asp-area="" asp-controller="AboutUs" asp-action="AboutUs">O Nas 3</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="navbar-inherited-text-style" asp-area="" asp-controller="AboutUs" asp-action="AboutUs">O Nas 4</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -28,12 +43,12 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted footer-inherited-style">
         <div class="container footer-inherited-text-style">
             &copy; 2024 - Edustrefa - strona poświęcona nauce bla bla bla....
